kubernetes/apps/default/paperless/app/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-paperless-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: homepage
